--- a/posts/challenge3_instructions.qmd
+++ b/posts/challenge3_instructions.qmd
@@ -35,7 +35,7 @@ Today's challenge is to:
 1.  read in a data set, and describe the data set using both words and any supporting information (e.g., tables, etc)
 2.  identify what needs to be done to tidy the current data
 3.  anticipate the shape of pivoted data
-4.  pivot the data into tidy format using `pivot_longer`
+4.  pivot the data into tidy format using `pivot_longer()` or `pivot_wider()`.   
 
 ## Read in data
 
@@ -49,17 +49,15 @@ Read in one (or more) of the following datasets, using the correct R package and
 
 ### Briefly describe the data
 
-Describe the data, and be sure to comment on why you are planning to pivot it to make it "tidy"
+Describe the data, and be sure to comment on why you are planning to pivot it to make it "tidy".  
 
 ## Anticipate the End Result
 
 The first step in pivoting the data is to try to come up with a concrete vision of what the end product *should* look like - that way you will know whether or not your pivoting was successful.
 
-One easy way to do this is to think about the dimensions of your current data (tibble, dataframe, or matrix), and then calculate what the dimensions of the pivoted data should be.
+One easy way to do this is to think about the dimensions of your current dataset and identify how you want a new one to look.  
 
-Suppose you have a dataset with $n$ rows and $k$ variables. In our example, 3 of the variables are used to identify a case, so you will be pivoting $k-3$ variables into a longer format where the $k-3$ variable names will move into the `names_to` variable and the current values in each of those columns will move into the `values_to` variable. Therefore, we would expect $n * (k-3)$ rows in the pivoted dataframe!
-
-### Example: find current and future data dimensions
+### Example: pivoting a dataset
 
 Lets see if this works with a simple example.
 
@@ -74,38 +72,24 @@ df<-tibble(country = rep(c("Mexico", "USA", "France"),2),
                              scale = 400))
 df
 
-#existing rows/cases
-nrow(df)
-
-#existing columns/cases
-ncol(df)
-
-#expected rows/cases
-nrow(df) * (ncol(df)-3)
-
-# expected columns 
-3 + 2
 ```
-
-Or simple example has $n = 6$ rows and $k - 3 = 2$ variables being pivoted, so we expect a new dataframe to have $n * 2 = 12$ rows x $3 + 2 = 5$ columns.
+In this example, we want the names `outgoing` and `ingoing` to be in a single column indicating the trade direction, with the values being stored in a column indicating the value of the trade.  
 
 ## Pivot the Data
 
-Now we will pivot the data, and compare our pivoted data dimensions to the dimensions calculated above as a "sanity" check.
+Now we will pivot the data!   
 
 ### Example
 
 ```{r}
 #| tbl-cap: Pivoted Example
 
-df<-pivot_longer(df, col = c(outgoing, incoming),
+df1<-pivot_longer(df, col = c(outgoing, incoming),
                  names_to="trade_direction",
                  values_to = "trade_value")
-df
+df1
 ```
 
-Yes, once it is pivoted long, our resulting data are $12x5$ - exactly what we expected!
+Yes, once it is pivoted long, it will be much easier to work with.
 
-## Your challenge  
 
-In general, try your best with this challenge. You might have a tough time exactly calculating the desired dimensions of your dataset, and that is okay. However, you should be able to do some pivoting and get your data to a tidy format (or at least close to one).
