update pivot title (again)

--- a/posts/example-pivoting.qmd
+++ b/posts/example-pivoting.qmd
@@ -1,5 +1,5 @@
 ---
-title: "group_by() & summarise()"
+title: "pivoting/tidy data"
 author: "Sean Conway"
 editor: visual
 description: "pivoting/tidy data"  
