--- a/posts/example-data_analysis_pipeline.qmd
+++ b/posts/example-data_analysis_pipeline.qmd
@@ -107,7 +107,7 @@ railroad_state_totals <- railroad_us %>%
 railroad_state_totals
 ```
 
-Now that we have these totals, we're going to calculate some measures of *central tendency* and *dispersion*. Central tendency refers to the "middle" of the dataset (roughly speaking) and is commonly measured using mean or median. Dispersion refers to the extent to which the data differ from the center and is commonly measured using standard deviation and range. We'll also use `min()` and `max()` to find the the minimum and maximum number of employees in a state.
+Now that we have these totals, we're going to calculate some measures of *central tendency* and *dispersion*. Central tendency refers to the "middle" of the variable (roughly speaking) and is commonly measured using mean or median. Dispersion refers to the extent to which the data differ from the center and is commonly measured using standard deviation and range. We'll also use `min()` and `max()` to find the the minimum and maximum number of employees in a state.
 
 ```{r}
 railroad_state_totals %>%
@@ -131,8 +131,7 @@ railroad_state_totals %>%
 
 We can see that there are actually *three* states with substantially high employee totals - Texas, Illinois, and New York.
 
-Let's take a closer look at those states in `railroad_us`\
-. It seems highly possible that, within those states, there are some counties that have a much higher proportion of employees. For example, Illinois's Cook County, which contains the city of Chicago, almost certainly has a high proportion of railroad employees.
+Let's take a closer look at those states in `railroad_us`. It seems highly possible that, within those states, there are some counties that have a much higher proportion of employees. For example, Illinois's Cook County, which contains the city of Chicago, almost certainly has a high proportion of railroad employees.
 
 Below, we use `group_by()` and `mutate()` to create a new column that contains the total employees within each state[^1], called `n`. This is the denominator that will allow us to compute the proportion of each state's employees that come from a particular county. Then, we use `mutate()` to compute these proportions and then arrange the data descending based on proportions to see if there are any high proportion counties.
 
@@ -148,7 +147,7 @@ railroad_us %>%
   arrange(desc(prop))
 ```
 
-Indeed, Cook County in Illinois (which contains Chicago), Suffolk County in New York (which contains much of Long Island), and Tarrant County in Texas (which contains Forth Worth), all have high proportions of their states' railroad employees. These are all populous areas that likely have high amounts of commercial and passenger traffic.
+Indeed, Cook County in Illinois (which contains Chicago), Suffolk County in New York (which contains much of Long Island), and Tarrant County in Texas (which contains Fort Worth), all have high proportions of their states' railroad employees. These are all populous areas that likely have high amounts of commercial and passenger traffic.
 
 That concludes our analysis for now. The next step would be to create visualizations, though we haven't gotten there in the course.
 
